# cratesync

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  discogs_deletion.py  discogs_migration.py  discogs_migration_handoff.md
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  launcher.py  main.py  repository.py
backend/app/api/: routes.py
backend/app/domain/: models.py
backend/app/services/: discogs.py  exports.py  jobs.py  keychain.py  planner.py  selection.py
backend/app/tests/: test_auth_routes.py  test_config.py  test_jobs.py  test_normalizer.py  test_planner.py  test_selection.py
docs/: README.md  architecture.md  design-system.md  dev-setup.md  migration-workflow.md  package-macos.md  pending-review-copy-and-p3-cleanup.md
docs/feedback/: Impeccable Skill Workflow.md
docs/project/: CrateSync Project Identity.md  Frontend Backlog.md  Grid Exploration Handoff.md
docs/superpowers/plans/: 2026-04-09-remove-step1-panel.md  2026-04-10-job-console-audit-surface.md  2026-04-10-review-launch-clarity.md  2026-04-14-review-summary-and-blockers.md
docs/superpowers/specs/: 2026-04-14-review-summary-and-blockers-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/__design_lab/: DesignLabPage.tsx  FeedbackOverlay.tsx  fixtures.ts  (+1 more)
frontend/tests/: layoutCss.test.ts  reviewLayoutCss.test.ts  reviewPresentation.test.ts  reviewSectionSource.test.ts  syncProgressDisplay.test.ts
scripts/: package_macos.sh
(+40 files in other folders)
