[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discogs-migration-local-app"
version = "0.1.0"
description = "Local Discogs collection migration app"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "requests-oauthlib>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "httpx>=0.27,<1",
]
package = [
  "pyinstaller>=6,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]
